detalles sobre main

--- a/main.ipynb
+++ b/main.ipynb
@@ -50,7 +50,17 @@
     "id": "YdnHTFLEG-05",
     "outputId": "1cb9dde2-fbff-4272-92b8-aff04bf0f273"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Francisco\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\huggingface_hub\\file_download.py:139: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\Francisco\\.cache\\huggingface\\hub\\models--sentence-transformers--paraphrase-multilingual-MiniLM-L12-v2. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n"
+     ]
+    }
+   ],
    "source": [
     "# Cargamos el modelo preentrenado SentenceTransformer para generar embeddings a partir de texto en múltiples idiomas\n",
     "model = SentenceTransformer('sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2')"
@@ -831,23 +841,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Su estado de ánimo es: Melancólico\n",
-      "Buscando recomendaciones para: historia de amor\n",
+      "Su estado de ánimo es: Alegre\n",
+      "Buscando recomendaciones para: una historia de amor\n",
       "\n",
       "Recomendaciones de juegos:\n",
-      "- Near and Far\n",
+      "- The Pursuit of Happiness\n",
       "- Love Letter\n",
-      "- Cthulhu: Death May Die\n",
+      "- Tales of the Arabian Nights\n",
       "\n",
       "Recomendaciones de películas:\n",
-      "- Equals: In an emotionless utopia, two people fall in love when they regain their feelings from a mysterious disease, causing tensions between them and their society.\n",
-      "- The Longest Ride: The lives of a young couple intertwine with a much older man, as he reflects back on a past love.\n",
-      "- Endless Love: The story of a privileged girl and a charismatic boy whose instant desire sparks a love affair made only more reckless by parents trying to keep them apart.\n",
+      "- Dear Zindagi: Kaira is a budding cinematographer in search of a perfect life. Her encounter with Jug, an unconventional thinker, helps her gain a new perspective on life. She discovers that happiness is all about finding comfort in life's imperfections.\n",
+      "- The Promise: Set during the last days of the Ottoman Empire, The Promise follows a love triangle between Michael, a brilliant medical student, the beautiful and sophisticated Ana, and Chris - a renowned American journalist based in Paris.\n",
+      "- The Lucky One: A Marine travels to Louisiana after serving three tours in Iraq and searches for the unknown woman he believes was his good luck charm during the war.\n",
       "\n",
       "Recomendaciones de libros:\n",
       "- Le roman de la rose - Tome I: Le roman de la rose - Tome I\" by Guillaume de Lorris and Jean de Meung is an allegorical poem written in the late 13th century. This significant work explores themes of love, desire, and the complexities of human emotions through the journey of its main character, known as the Lover, who seeks to attain a beautiful rose, symbolizing love. The narrative structure intertwines the perspectives of its two authors, each contributing their unique style and ideas to the exploration of love and courtly behavior.  At the start of the narrative, the Lover encounters a dream-like realm filled with personified virtues and vices, as he expresses his longing for the rose. He is introduced to a garden of pleasure guarded by various allegorical figures representing obstacles to love such as Danger, Shame, and Fear. The opening portion sets the stage for a rich allegorical tapestry where characters like Bel-Accueil (Good Reception) assist the Lover while others like Jalousie (Jealousy) and Malebouche (Bad Talk) complicate his pursuit. The setup captures the challenges and frustrations of romantic desire, emphasizing the balance between hope and despair that characterizes the quest for true love.\n",
-      "- Revelations of Divine Love: Revelations of Divine Love\" by Julian of Norwich is a spiritual and mystical work written in the 14th century. This piece is considered one of the first books in the English language authored by a woman and offers profound insights into the nature of God's love and compassion as experienced by the author. It presents a series of revelations or visions that Julian received during a period of illness, focusing on themes of divine love, the suffering of Christ, and the human condition.  The opening of the text establishes Julian's identity as a recluse and sets the tone for her reflections on her relationship with God. She describes her experiences leading up to the moment she received a series of fourteen revelations. These revelations detail her visionary encounters with Christ's Passion and the divine, filled with teachings on faith, love, and the complexity of sin and suffering. Julian emphasizes her humble position as an unlearned \"simple creature,\" articulating her deep longing for understanding and connection with the Divine. Her reflections not only engage with profound theological concepts but also serve as a source of comfort and guidance for believers seeking a greater love and compassion in their own lives.\n",
-      "- The Sorrows of Young Werther: The Sorrows of Young Werther\" by Johann Wolfgang von Goethe is a novel written during the late 18th century, specifically in the Sturm und Drang literary movement era. The story revolves around Werther, a young artist who becomes deeply infatuated with a woman named Charlotte, who is already betrothed to another man, leading him into a spiral of emotional distress and romantic turmoil.  The opening of the novel introduces us to Werther through a series of letters he writes to his friend Wilhelm. In these letters, he expresses his complex emotions about love, life, and nature. He describes the beauty of his surroundings and his internal struggle regarding his feelings for Charlotte. As he reflects on his past romantic entanglements and the nature of happiness, his passionate and introspective character begins to unfold. The beginning sets the stage for Werther's eventual emotional conflicts and highlights the themes of unrequited love and the intensity of youthful feelings that will define the trajectory of his fate throughout the novel.\n"
+      "- Ars Amatoria; or, The Art Of LoveLiterally Translated into English Prose, with Copious Notes: Ars Amatoria; or, The Art of Love\" by Ovid is a romantic didactic poem written in the early 1st century AD. This work serves as a guide to love and seduction, offering practical advice to men on how to win the affection of women. It blends humor, elegance, and insight into human relationships, making it a classic of Latin literature.  At the start of the text, Ovid invites readers to learn the \"art of loving,\" likening the skill of love to that of a sailor navigating a ship or a charioteer controlling a team of horses. He emphasizes the importance of finding the right partner and lays out strategies for pursuing romance, from observing potential loves in public places to utilizing the influence of handmaidens. The emphasis on both the methods and the atmosphere of courtship reflects the playful and complex nature of human attraction, presenting love as a strategic undertaking requiring both artistry and patience.\n",
+      "- Revelations of Divine Love: Revelations of Divine Love\" by Julian of Norwich is a spiritual and mystical work written in the 14th century. This piece is considered one of the first books in the English language authored by a woman and offers profound insights into the nature of God's love and compassion as experienced by the author. It presents a series of revelations or visions that Julian received during a period of illness, focusing on themes of divine love, the suffering of Christ, and the human condition.  The opening of the text establishes Julian's identity as a recluse and sets the tone for her reflections on her relationship with God. She describes her experiences leading up to the moment she received a series of fourteen revelations. These revelations detail her visionary encounters with Christ's Passion and the divine, filled with teachings on faith, love, and the complexity of sin and suffering. Julian emphasizes her humble position as an unlearned \"simple creature,\" articulating her deep longing for understanding and connection with the Divine. Her reflections not only engage with profound theological concepts but also serve as a source of comfort and guidance for believers seeking a greater love and compassion in their own lives.\n"
      ]
     }
    ],
