--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Trabajo Practico N°1 NLP\n",
     "Integrantes: \n",
-    "1. Rodriguez y Barros, Francisco : \n",
+    "1. Rodriguez y Barros, Francisco : R-4559/4\n",
     "2. Slepoy, David : S-5782/7"
    ]
   },
@@ -26,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Francisco\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sentence_transformers\\cross_encoder\\CrossEncoder.py:13: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\david\\OneDrive\\Escritorio\\T.U.I.A\\4.2 PROCESAMIENTO DEL LENGUAJE NATURAL\\directorio\\lib\\site-packages\\sentence_transformers\\cross_encoder\\CrossEncoder.py:13: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from tqdm.autonotebook import tqdm, trange\n"
      ]
     }
@@ -50,17 +50,7 @@
     "id": "YdnHTFLEG-05",
     "outputId": "1cb9dde2-fbff-4272-92b8-aff04bf0f273"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Francisco\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\huggingface_hub\\file_download.py:139: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\Francisco\\.cache\\huggingface\\hub\\models--sentence-transformers--paraphrase-multilingual-MiniLM-L12-v2. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cargamos el modelo preentrenado SentenceTransformer para generar embeddings a partir de texto en múltiples idiomas\n",
     "model = SentenceTransformer('sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2')"
@@ -700,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,6 +708,7 @@
     "        Solicita la frase del usuario para clasificar el estado de ánimo.\n",
     "        \"\"\"\n",
     "        frase_usuario = input(\"Ingresa una frase para clasificar tu estado de ánimo: \")\n",
+    "        print(\"La frase a clasificar es\")\n",
     "        return frase_usuario\n",
     "    \n",
     "    def procesar_estado_animo(self, frase_usuario):\n",
@@ -842,22 +833,22 @@
      "output_type": "stream",
      "text": [
       "Su estado de ánimo es: Alegre\n",
-      "Buscando recomendaciones para: una historia de amor\n",
+      "Buscando recomendaciones para: Alegre\n",
       "\n",
       "Recomendaciones de juegos:\n",
-      "- The Pursuit of Happiness\n",
-      "- Love Letter\n",
-      "- Tales of the Arabian Nights\n",
+      "- Maria\n",
+      "- Azul: Queen's Garden\n",
+      "- Grand Austria Hotel\n",
       "\n",
       "Recomendaciones de películas:\n",
-      "- Dear Zindagi: Kaira is a budding cinematographer in search of a perfect life. Her encounter with Jug, an unconventional thinker, helps her gain a new perspective on life. She discovers that happiness is all about finding comfort in life's imperfections.\n",
+      "- Les Misérables: In 19th-century France, Jean Valjean, who for decades has been hunted by the ruthless policeman Javert after breaking parole, agrees to care for a factory worker's daughter. The decision changes their lives forever.\n",
       "- The Promise: Set during the last days of the Ottoman Empire, The Promise follows a love triangle between Michael, a brilliant medical student, the beautiful and sophisticated Ana, and Chris - a renowned American journalist based in Paris.\n",
-      "- The Lucky One: A Marine travels to Louisiana after serving three tours in Iraq and searches for the unknown woman he believes was his good luck charm during the war.\n",
+      "- Woman in Gold: Maria Altmann, an octogenarian Jewish refugee, takes on the Austrian government to recover artwork she believes rightfully belongs to her family.\n",
       "\n",
       "Recomendaciones de libros:\n",
-      "- Le roman de la rose - Tome I: Le roman de la rose - Tome I\" by Guillaume de Lorris and Jean de Meung is an allegorical poem written in the late 13th century. This significant work explores themes of love, desire, and the complexities of human emotions through the journey of its main character, known as the Lover, who seeks to attain a beautiful rose, symbolizing love. The narrative structure intertwines the perspectives of its two authors, each contributing their unique style and ideas to the exploration of love and courtly behavior.  At the start of the narrative, the Lover encounters a dream-like realm filled with personified virtues and vices, as he expresses his longing for the rose. He is introduced to a garden of pleasure guarded by various allegorical figures representing obstacles to love such as Danger, Shame, and Fear. The opening portion sets the stage for a rich allegorical tapestry where characters like Bel-Accueil (Good Reception) assist the Lover while others like Jalousie (Jealousy) and Malebouche (Bad Talk) complicate his pursuit. The setup captures the challenges and frustrations of romantic desire, emphasizing the balance between hope and despair that characterizes the quest for true love.\n",
-      "- Ars Amatoria; or, The Art Of LoveLiterally Translated into English Prose, with Copious Notes: Ars Amatoria; or, The Art of Love\" by Ovid is a romantic didactic poem written in the early 1st century AD. This work serves as a guide to love and seduction, offering practical advice to men on how to win the affection of women. It blends humor, elegance, and insight into human relationships, making it a classic of Latin literature.  At the start of the text, Ovid invites readers to learn the \"art of loving,\" likening the skill of love to that of a sailor navigating a ship or a charioteer controlling a team of horses. He emphasizes the importance of finding the right partner and lays out strategies for pursuing romance, from observing potential loves in public places to utilizing the influence of handmaidens. The emphasis on both the methods and the atmosphere of courtship reflects the playful and complex nature of human attraction, presenting love as a strategic undertaking requiring both artistry and patience.\n",
-      "- Revelations of Divine Love: Revelations of Divine Love\" by Julian of Norwich is a spiritual and mystical work written in the 14th century. This piece is considered one of the first books in the English language authored by a woman and offers profound insights into the nature of God's love and compassion as experienced by the author. It presents a series of revelations or visions that Julian received during a period of illness, focusing on themes of divine love, the suffering of Christ, and the human condition.  The opening of the text establishes Julian's identity as a recluse and sets the tone for her reflections on her relationship with God. She describes her experiences leading up to the moment she received a series of fourteen revelations. These revelations detail her visionary encounters with Christ's Passion and the divine, filled with teachings on faith, love, and the complexity of sin and suffering. Julian emphasizes her humble position as an unlearned \"simple creature,\" articulating her deep longing for understanding and connection with the Divine. Her reflections not only engage with profound theological concepts but also serve as a source of comfort and guidance for believers seeking a greater love and compassion in their own lives.\n"
+      "- The Anabasis of Alexanderor, The History of the Wars and Conquests of Alexander the Great: The Anabasis of Alexander\" by Arrian is a historical account written in the early 2nd century. This work chronicles the life and military campaigns of Alexander the Great, offering insights into his strategies, battles, and the political landscape of the ancient world. Arrian's narrative is based on the accounts of contemporaries and witnesses, particularly those who served under Alexander, providing a detailed and authentic portrayal of the historical events.  The opening of the text sets the stage for Alexander's ascent to power following the death of his father, Philip II. As he secures his command among the Greek states and prepares for his adventures, the narrative describes early encounters with Thracian tribes, showcasing Alexander's military prowess. These initial skirmishes reveal his strategic acumen, deft maneuvering of his troops, and early victories that cement his reputation as a formidable leader. As Arrian begins to flesh out Alexander's campaigns, readers are drawn into the epic tale of conquest and ambition that shaped the ancient world.\n",
+      "- Aeneidos: Aeneidos\" by Virgil is an epic poem written during the late 1st century BC. The work centers on the hero Aeneas, a Trojan prince who embarks on a tumultuous journey after the fall of Troy, aiming to reach Italy and fulfill his destiny as the founder of Rome. The narrative commences with themes of divine intervention, fate, and the struggles faced by Aeneas and his companions.  The opening of the poem introduces us to Aeneas, who is grappling with the loss of his homeland and the wrath of the goddess Juno. As he navigates treacherous seas filled with storms and dangers conjured by divine forces, the reader witnesses his poignant reflections on loss and longing for home. We encounter other significant figures, including the vengeful goddess Juno, who fears that Aeneas’s lineage will lead to the downfall of Carthage, and Aeolus, the king of the winds, who is manipulated by Juno to unleash chaos upon Aeneas's fleet. These initial verses lay the groundwork for the epic's exploration of heroism, destiny, and the interplay between mortals and the divine as Aeneas strives to establish a new beginning for his people in Italy.\n",
+      "- The Aeneid: The Aeneid\" by Virgil is an epic poem written during the late 1st century BC. The book centers on the journey of Aeneas, a Trojan hero, as he seeks to fulfill his destiny of founding a new city in Italy after the fall of Troy. The poem explores themes of fate, duty, and divine intervention, portraying Aeneas's struggles against various forces, both mortal and divine, as he navigates his way through numerous challenges and hardships.  The opening of \"The Aeneid\" introduces us to the plight of Aeneas and the remaining Trojans after they are shipwrecked due to a storm conjured by Juno, the queen of the gods. After enduring years of wandering and misfortune, Aeneas arrives in Carthage, where he encounters the land's queen, Dido. The goddess Venus disguises herself to aid Aeneas, revealing the depth of his trials and his noble spirit. As Aeneas recounts the tragic downfall of Troy, he prepares to share his adventures with Dido, setting the stage for future events that intertwine love, loyalty, and the weight of destiny.\n"
      ]
     }
    ],
@@ -871,7 +862,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "directorio",
    "language": "python",
    "name": "python3"
   },
@@ -885,7 +876,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
